# Backtesting_Cython_Cpp

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  research_func.py  sample_main.py
cpp_test/df_test/: CMakeLists.txt
cpp_test/techinical_index/: macd.cpp  std.cpp
cpp_test/whole_test/: main.cpp  thread_time_test.cpp
cython_module/: research.pyx  setup.py
cython_module/include/: base.hpp  base_strategy.hpp  entry.hpp  structure.hpp  util.hpp
cython_module/include/deprecated/: old.hpp
cython_module/include/utils/: array_manager.hpp  data.hpp  math_func.hpp
cython_module/package/: research.cp38-win_amd64.pyd
py_module/: indicator_adding.py
research_cython/: __init__.py  build.bat  research.pyx  setup.py
research_cython/include/: base_strategy.hpp  entry.hpp  structure.hpp  util.hpp
research_cython/package/: research.cp38-win_amd64.pyd
